@@ -34,11 +34,11 @@ public class QueryStringErrorTests extends ErrorsForCasesWithoutExamplesTestCase
 
     @Override
     protected Expression build(Source source, List<Expression> args) {
-        return new QueryString(source, args.get(0));
+        return new QueryString(source, args.getFirst(), null);
     }
 
     @Override
     protected Matcher<String> expectedTypeErrorMatcher(List<Set<DataType>> validPerPosition, List<DataType> signature) {
-        return equalTo(typeErrorMessage(false, validPerPosition, signature, (v, p) -> "string"));
+        return equalTo(typeErrorMessage(true, validPerPosition, signature, (v, p) -> "keyword, text, semantic_text"));
     }
 }
